<resources>
    <!---->
    <string name="logoDescriptionID">Logo</string>
    <!--Dashboard-->
    <string name="app_name">UpCode</string>
    <string name="addID">Add Goal</string>
    <string name="linkID">Connect Profile</string>
    <string name="statusID">Progress</string>
    <string name="accountsID">Connected Platforms</string>

    <!--Add Contributions-->
    <string name="contributionTitleID">Title</string>
    <string name="noOfContributionsID">Number of Contributions</string>
    <string name="contributionDescriptionID">Description</string>
    <string name="contributionPlatformID">Platform</string>
    <string name="fillerID">null</string>
    <string name="saveContributionID">Save Contribution</string>

    <!--Link profile-->
    <string name="linkProfileID">Link Profile</string>
    <string name="profileUrlID">None</string>
    <string name="backID">Go Back</string>
    <string name="tagline">Even One line of code is a contribution</string>
    <string name="imageContexLOGO">logo</string>
</resources>