<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/layout_color"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="260dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/imageContexLOGO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textSize="20sp"
        android:textColor="#BDBDBD"
        android:layout_marginBottom="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addID"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/addID"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/linkID"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/linkID"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/statusID"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/statusID"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accountsID"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/accountsID"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

</LinearLayout>
