<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinkProfileActivity"
    android:background="@color/layout_color"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/logoDescriptionID" />

    <EditText
        android:id="@+id/profileUrlEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="textUri"
        android:hint="@string/profileUrlID"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/shallow_hint_color"
        android:autofillHints="webAddress"
        tools:ignore="RtlSymmetry" />

    <!-- Button to Link Profile -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/linkProfileButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/linkProfileID"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

</LinearLayout>
